--- a/templates/global.html
+++ b/templates/global.html
@@ -81,12 +81,17 @@
               médica</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/citasmedicasreservadas/{{patient.id}}">Citas médicas reservadas</a>
+            <a class="nav-link active" href="/citasmedicasreservadas/{{patient.id}}">Citas médicas reservadas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/historialcitasmedicas/{{patient.id}}">Historial citas médicas</a>
-          </li>
+            <a class="nav-link active" href="/historialcitasmedicas/{{patient.id}}">Historial citas médicas</a>
+          </li>    
         </ul>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" href="/usuariologout">Logout</a>
+          </li>
+        </ul>    
       </div>
     </div>
   </nav>
