--- a/templates/global2.html
+++ b/templates/global2.html
@@ -94,6 +94,11 @@
                         </ul>
                       </li>
                 </ul>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" href="/usuariologout">Logout</a>
+                    </li>
+                </ul> 
             </div>
         </div>
     </nav>
