--- a/templates/citasMedicasReservadas.html
+++ b/templates/citasMedicasReservadas.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <h3>Citas médicas reservadas</h3>
-<div class="tablas">
+<div class="tablas table-responsive">
     <table class="table table-striped">
         <thead class="cabecera"> 
             <tr>
