--- a/templates/citasMedicasProgramadas.html
+++ b/templates/citasMedicasProgramadas.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <h3>Citas médicas programadas</h3>
-<div class="tablas">
+<div class="tablas table-responsive">
     <table class="table table-striped">
         <thead class="cabecera"> 
             <tr>
