--- a/templates/historialCitasMedicasRealizadas.html
+++ b/templates/historialCitasMedicasRealizadas.html
@@ -3,7 +3,7 @@
     {% block body %}
 
     <h3>Historial citas médicas</h3>
-    <div class="tablas">
+    <div class="tablas table-responsive">
         <table class="table table-striped">
             <thead class="cabecera">
                 <tr>
